--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,8 @@ html {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     min-height: 100%;
     background-color: #E9E9E9;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0' gradientTransform='rotate(195,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23D700E7'/%3E%3Cstop offset='1' stop-color='%23D09005'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(153,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23DD00DD'/%3E%3Cstop offset='1' stop-color='%2354004D'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='10.23'%3E%3Cpath transform='translate(-4.2 -2.4) rotate(-2.4 1409 581) scale(0.982)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='3.4100000000000006' transform='translate(-15 6) rotate(-1.2 800 450) scale(0.997)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(-4.2 9) rotate(-15 401 736) scale(0.997)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='3.1'%3E%3Cpath transform='translate(36 3.6) rotate(-0.9 150 345) scale(1.006)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='6.820000000000001' transform='translate(9 -18) rotate(-21.6 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='translate(-2.4 -2.4) rotate(-3.6 1400 132) scale(0.97)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
@@ -18,6 +20,7 @@ body {
     background-size: cover;
     font-family: Expose-Regular;
     font-size: 18px;
+    min-width: 350px;
 }
 
 img, video {
@@ -39,7 +42,7 @@ header {
     width: fit-content;
     min-width: 20vw;
     background-color: hsla(0, 100%, 100%, 90%);
-    margin: 1rem 1rem auto auto;
+    margin: 1rem auto;
     border-radius: 10rem;
     opacity: 0;
     animation: 1s appear linear 2s forwards;
@@ -172,6 +175,7 @@ li > a:hover {
     display: flex;
     position: relative;
     bottom: 6rem;
+    height: 100vh;
 }
 
 .pinkfield {
@@ -194,6 +198,8 @@ li > a:hover {
 .grayfield > img {
     position: relative;
     min-width: 20vw;
+    aspect-ratio: 1/1.3;
+    object-fit: cover;
     width: 25rem;
     filter: grayscale(70%);
     border-radius: 30%;
@@ -447,7 +453,7 @@ button img {
 .horizontalblock {
     width: 100%;
     display: flex;
-    padding: 4rem 10rem 4rem 10rem;
+    padding: 7rem 10rem;
     color: hsla(0, 100%, 100%, 90%);
     background-color: hsla(0, 0%, 0%, 70%);
 }
@@ -548,4 +554,287 @@ input::placeholder, textarea::placeholder {
 
 .socials a:hover {
     filter: invert(65%) sepia(36%) saturate(7053%) hue-rotate(284deg) brightness(103%) contrast(106%);
+}
+
+.newline {
+    display: none;
+}
+
+@media only screen and (max-width: 1280px) {
+    .text {
+        margin: 3rem 5rem 3rem 5rem;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .text {
+        max-width: 100%;
+        margin: 1rem 3rem;
+        text-align: center;
+        height: fit-content;
+    }
+
+    .skills {
+        justify-content: center;
+    }
+
+    .skills img:hover {
+        filter: none;
+    }
+
+    #introduction {
+        flex-direction: column;
+        top: 5rem;
+    }
+
+    .contactform {
+        margin-right: 0;
+    }
+
+    .pinkfield {
+        display: none;
+    }
+
+    .grayfield {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .grayfield > img {
+        transform: none;
+        max-width: 25vw;
+    }
+
+    .grayfield > img:hover {
+        transform: none;
+        filter: grayscale(70%);
+    }
+
+    .whitebox {
+        border-radius: 5rem;
+        width: 70vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        animation: none;
+        transform: none;
+        margin-bottom: 8rem;
+        animation: 1s appear linear 2s forwards;
+        opacity: 0;
+    }
+
+    #arrow {
+        display: none;
+    }
+
+    #hover1, #hover2, #hover3 {
+        display: none;
+    }
+
+    .horizontalblock {
+        padding: 4rem;
+    }
+
+    .socials {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 985px) {
+    body {
+        font-size: 16px;
+    }
+
+    nav {
+        display: flex;
+    }
+
+    .nav-sign {
+        display: none;
+    }
+
+    header {
+        max-width: 70vw;
+        right: auto;
+        align-self: center;
+    }
+
+    header ul {
+        padding: 0;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    header {
+        position: relative;
+        top: 0;
+        width: 100vw;
+        max-width: none;
+        border-radius: 0;
+        margin: 0;
+        box-shadow: 0 0 25px hsla(0, 0%, 0%, 20%);
+    }
+
+    #introduction {
+        height: calc(100vh - 5rem);
+        top: 0;
+    }
+
+    .grayfield {
+        justify-content: space-between;
+    }
+
+    .whitebox {
+        width: 80vw;
+        margin-bottom: 0;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        box-shadow: 0 -10px 25px hsla(0, 0%, 0%, 20%);
+    }
+
+    .text {
+        margin-top: 3rem;
+        margin-bottom: 8rem;
+    }
+
+    .newline {
+        position: absolute;
+        bottom: 0;
+        display: flex;
+    }
+
+    .projects-grid {
+        grid: repeat(auto-fill, minmax(10px, 1fr)) / 1fr;
+        max-width: 585px;
+    }
+
+    .project-card img {
+        max-height: 80vh;
+        object-fit: cover;
+        object-position: top;
+    }
+
+    .tall, .medium-tall {
+        grid-row: span 1;
+    }
+    .c11, .c9 {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .grayfield {
+        justify-content: flex-end;
+    }
+
+    .grayfield > img {
+        max-width: 40vw;
+    }
+}
+
+@media only screen and (max-width: 570px) {
+    header {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 7rem;
+    }
+
+    header ul {
+        margin-bottom: .5rem;
+    }
+
+    header .logo {
+        margin-right: 0;
+    }
+
+    #introduction {
+        height: calc(100vh - 7rem);
+    }
+
+    h3 {
+        font-size: 5rem;
+    }
+
+    .line {
+        bottom: 2rem;
+    }
+
+    #contact .heading {
+        top: calc(45px - 1rem);
+    }
+
+    .newline {
+        display: none;
+    }
+
+    .whitebox {
+        width: 100vw;
+    }
+
+    .grayfield > img {
+        max-width: 55vw;
+    }
+
+    .projects-grid {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .horizontalblock {
+        padding-top: 5rem;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contactform > p {
+        display: none;
+    }
+
+    .socials {
+        width: fit-content;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .socialsinner {
+        flex-direction: row;
+        width: fit-content;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 1rem 0;
+    }
+
+    .socials a {
+        padding: 0 .5rem 0 .2rem;
+    }
+
+    .project-skills {
+        margin-bottom: 1rem;
+    }
+
+    .project-card img {
+        max-height: 60vh;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .horizontalblock {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    h3 {
+        font-size: 4rem;
+    }
+
+    .line {
+        bottom: 1.5rem;
+    }
+
+    #contact .heading {
+        top: calc(45px - 1.4rem);
+    }
 }
