--- a/src/css/style.css
+++ b/src/css/style.css
@@ -197,7 +197,7 @@ li > a:hover {
 
 .grayfield > img {
     position: relative;
-    min-width: 20vw;
+    min-width: 35vw;
     aspect-ratio: 1/1.3;
     object-fit: cover;
     width: 25rem;
@@ -399,6 +399,7 @@ h3 {
     align-items: center;
     padding-top: .5rem;
     padding-bottom: .7rem;
+    margin-bottom: 1rem;
 }
 
 .linkbar button, input[type="submit"] {
@@ -613,10 +614,12 @@ input::placeholder, textarea::placeholder {
     }
 
     .grayfield > img {
-        position: relative;
+        /* position: relative; */
         transform: none;
-        max-width: 25vw;
-        top: .8rem;
+        /* max-width: 25vw;
+        top: .8rem; */
+        margin: auto 0;
+        max-width: 70vw;
     }
 
     .grayfield > img:hover {
@@ -633,7 +636,7 @@ input::placeholder, textarea::placeholder {
         align-items: center;
         animation: none;
         transform: none;
-        margin-bottom: 8rem;
+        margin: auto 0;
         animation: 1s appear linear 2s forwards;
         opacity: 0;
     }
@@ -696,7 +699,7 @@ input::placeholder, textarea::placeholder {
     }
 
     .grayfield {
-        justify-content: space-between;
+        justify-content: flex-end;
     }
 
     .whitebox {
@@ -724,10 +727,11 @@ input::placeholder, textarea::placeholder {
         max-width: 585px;
     }
 
-    .project-card img {
+    .project-card > img {
         max-height: 80vh;
         object-fit: cover;
         object-position: top;
+        margin: auto;
     }
 
     .videobox img {
@@ -835,11 +839,7 @@ input::placeholder, textarea::placeholder {
         padding: 0 .5rem 0 .2rem;
     }
 
-    .project-skills {
-        margin-bottom: 1rem;
-    }
-
-    .project-card img {
+    .project-card > img {
         max-height: 60vh;
     }
 }
